--- a/Training/matrimonyfrontend1/src/styles/style.css
+++ b/Training/matrimonyfrontend1/src/styles/style.css
@@ -399,8 +399,8 @@ label {
   width: 80%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  justify-content: space-around;
+  /* justify-content: space-between;
+  justify-content: space-around; */
 }
 .home_div1_menu_row2 ul li {
   display: flex;
