--- a/Project/ecommers/src/styles/style.css
+++ b/Project/ecommers/src/styles/style.css
@@ -1,136 +1,183 @@
-body{
-    background-color: white;
-    margin: 0%;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
+body {
+  background-color: white;
+  margin: 0%;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
-
 
 /***************************Start Footer page******************************/
-.footer_row1{
-    display: flex;
-    flex-direction: row;
-    background: #EEEFFB;
-    justify-content: center;
-    padding-bottom: 50px;
-    padding-top: 10px;
+.footer_row1 {
+  display: flex;
+  flex-direction: row;
+  background: #eeeffb;
+  justify-content: center;
+  padding-bottom: 50px;
+  padding-top: 10px;
 }
 
-.fooer_row1_row1{
-    width: 70%;
-    display: flex;
-    flex-direction: row;
-    /* background-color: blue; */
+.fooer_row1_row1 {
+  width: 70%;
+  display: flex;
+  flex-direction: row;
+  /* background-color: blue; */
 }
 
-.footer_row1_col1{
-    display: flex;
-    flex-direction: column;
-    width: 37%;
-    /* background-color: yellow; */
-    margin: 2px;
-    padding: 10px;
+.footer_row1_col1 {
+  display: flex;
+  flex-direction: column;
+  width: 37%;
+  /* background-color: yellow; */
+  margin: 2px;
+  padding: 10px;
 }
 
-.footer_row1_col1 h1{
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 2.5rem;
+.footer_row1_col1 h1 {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 2.5rem;
 }
 
-.footer_row1_col2 h3{
-    padding-bottom: 10px;
-    font-size: 1.2rem;
-}
-
-.footer_row1_col1 label,
-.footer_row1_col2 label{
-    font-size: 1rem;
-    color: #9DA0AE;
-
-}
-
-.footer_row1_col1_input{
-    padding-bottom: 10px;
-}
-
-.footer_row1_col1_input input{
-    width: 190px;
-    height: 35px;
-    border-radius: 3px;
-    border: none;
-    font-size: 00.8rem;
-    outline: none;
-}
-
-.footer_row1_col1_input button{
-    background-color: #fb2e86 ;
-    border: none;
-    color: white;
-    height: 35px;
-    width: 100px;
-    border-radius: 3px;
-    /* display: flex; */
+.footer_row1_col2 h3 {
+  padding-bottom: 10px;
+  font-size: 1.2rem;
 }
 
 .footer_row1_col1 label,
-.footer_row1_col2 label{
-    padding-bottom: 10px;
-    font-size: .8rem;
+.footer_row1_col2 label {
+  font-size: 1rem;
+  color: #9da0ae;
 }
 
-.footer_row1_col2{
-    display: flex;
-    flex-direction: column;
-    width: 21%;
-    /* background-color: yellow; */
-    margin: 2px;
-    padding: 10px;
-    padding-top: 20px;
+.footer_row1_col1_input {
+  padding-bottom: 10px;
 }
 
+.footer_row1_col1_input input {
+  width: 190px;
+  height: 35px;
+  border-radius: 3px;
+  border: none;
+  font-size: 00.8rem;
+  outline: none;
+}
+
+.footer_row1_col1_input button {
+  background-color: #fb2e86;
+  border: none;
+  color: white;
+  height: 35px;
+  width: 100px;
+  border-radius: 3px;
+  /* display: flex; */
+}
+
+.footer_row1_col1 label,
+.footer_row1_col2 label {
+  padding-bottom: 10px;
+  font-size: 0.8rem;
+}
+
+.footer_row1_col2 {
+  display: flex;
+  flex-direction: column;
+  width: 21%;
+  /* background-color: yellow; */
+  margin: 2px;
+  padding: 10px;
+  padding-top: 20px;
+}
 
 /****************************footer div1 end**************************/
 
-.footer_row2{
-    display: flex;
-    flex-direction: row;
-    margin: 0%;
-    background: #E7E4F8;
+.footer_row2 {
+  display: flex;
+  flex-direction: row;
+  margin: 0%;
+  background: #e7e4f8;
 }
 
-.footer_row2_col1{
-    width: 50%;
-    text-align: center;
-    /* background-color: white; */
-    padding: 10px;
+.footer_row2_col1 {
+  width: 50%;
+  text-align: center;
+  /* background-color: white; */
+  padding: 10px;
 }
 
-.footer_row2_col1 label{
-    color: #9DA0AE;
-    font-size: 00.8rem;
+.footer_row2_col1 label {
+  color: #9da0ae;
+  font-size: 00.8rem;
 }
 
-.footer_row2_col2{
-    width: 50%;
-    display: flex;
-    flex-direction: row;
-    /* background-color: rebeccapurple; */
-    justify-content: center;
-    padding: 10px;
+.footer_row2_col2 {
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  /* background-color: rebeccapurple; */
+  justify-content: center;
+  padding: 10px;
 }
 
-.footer_row2_col2 div{
-    padding-right: 5px;
+.footer_row2_col2 div {
+  padding-right: 5px;
 }
-
 
 /******************************************************************/
 /**************************footer page end************************/
 /*****************************************************************/
 
+.featuredlist {
+  background-color: #F5F5F5;
+  font-family: 'Josefin Sans';
+}
 
-.featuredlist{
+.featurelist_outer {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-color: white;
+  align-items: center;
+  margin-top: 7%;
+}
+
+.featuredlist_outer_inner {
+  width: 70%;
+  display: flex;
+  /* background-color: rosybrown; */
+  padding: 10px;
+}
+
+.featuredlist_outer_inner_col1 {
+  width: 25%;
+  background-color:white;
+  margin: 10px;
+  padding-bottom: 10px;
+  border-style:ridge;
+  height: 361px;
+}
+
+.featuredlist_outer_inner_col1 h4{
+    color: #FB2E86;
+    font-size: 1.2rem;
+    /* padding-top: 5px; */
+    margin: 0px;
+    
+}
+
+.featuredlist_outer_inner_col1 label{
     display: flex;
     flex-direction: column;
-    text-align: center;
+    padding-top: 10px;
+    font-size: .9rem;
+    color: #151875;
+    font-family: 'Josefin Sans';
+}
+
+.featuredlist_outer_inner_col1_img{
+    background-color: #F6F7FB;
+    /* height: 25vh; */
+    /* padding-top: 10px; */
+    width: 270px;
+    height: 236px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    margin-bottom: 10px;
 }
