--- a/Project/ecommers/src/Featuredlist.css
+++ b/Project/ecommers/src/Featuredlist.css
@@ -17,29 +17,27 @@
 .featuredlist_outer_inner {
   /* width: 70%; */
   display: flex;
+  flex-direction: row;
   padding: 10px;
   margin-left: 0px;
   padding-left: 0;
 }
 
-.featuredlist_outer_inner_col1 {
-  width: 25%;
+.singlefeatredlist {
+  /* padding-top: 10px; */
+  width: 270px;
   background-color: white;
   margin: 10px;
   padding-bottom: 10px;
   height: 361px;
-  /* border-width: 2px; */
-  border: none;
-  /* box-shadow: 0px 0px 15px rgb(224, 234, 240); */
-  /* box-shadow: 0px 4px 4px rgba(0,0,0,0.25); */
-  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.10);
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
 }
 
-.featuredlist_outer_inner_col1:hover {
+.singlefeatredlist:hover {
   background-color: blue;
 }
 
-.featuredlist_outer_inner_col1 h4 {
+.singlefeatredlist h4 {
   color: #fb2e86;
   font-size: 1.2rem;
   /* padding-top: 5px; */
@@ -47,7 +45,11 @@
   padding-top: 10px;
 }
 
-.featuredlist_outer_inner_col1 label {
+.singlefeatredlist:hover h4 {
+  color: white;
+}
+
+.singlefeatredlist label {
   display: flex;
   flex-direction: column;
   padding-top: 10px;
@@ -56,108 +58,92 @@
   font-family: "Josefin Sans";
 }
 
-.featuredlist_outer_inner_col1:hover label {
+.singlefeatredlist:hover label {
   color: white;
 }
 
-.featuredlist_outer_inner_col1:hover h4 {
-  color: white;
-}
-
-.featuredlist_outer_inner_col1_divimg {
+.singlefeatredlist_inner {
+  padding-top: 10px;
   background-color: #f6f7fb;
-  /* padding-bottom: 10px; */
-  height: 246px;
+  height: 225px;
 }
 
-.featuredlist_outer_inner_col1_topimg {
-  justify-content: left;
+.singlefeatredlist_inner_topimg {
   display: flex;
-  flex-direction: row;
-  padding-top: 15px;
   padding-left: 10px;
-  color: green;
-  /* display: none; */
-}
-
-.featuredlist_outer_inner_col1_topimg_3,
-.featuredlist_outer_inner_col1_topimg_2,
-.featuredlist_outer_inner_col1_topimg_1 {
   display: none;
-  color: #b4b5d8;
-  /* display: flex;
-    width: 40px;
-    height: 40px;
-    background-color:silver;
-    border-radius: 50%; */
 }
 
-.featuredlist_outer_inner_col1:hover .circle {
+.singlefeatredlist:hover .singlefeatredlist_inner_topimg {
+  display: block;
   display: flex;
-  width: 30px;
-  height: 30px;
-  background-color: #e9e9f4;
-  border-radius: 50%;
-  margin-right: 5px;
-  display: flex;
-  align-items: center;
-  align-content: center;
-  /* display: none; */
 }
 
-/* .featuredlist_outer_inner_col1_topimg_3:hover circle{
-    display: block;
-  } */
-
-.featuredlist_outer_inner_col1:hover .featuredlist_outer_inner_col1_topimg_1 {
-  display: block;
-}
-
-.featuredlist_outer_inner_col1:hover .featuredlist_outer_inner_col1_topimg_3 {
-  display: block;
-}
-
-.featuredlist_outer_inner_col1:hover .featuredlist_outer_inner_col1_topimg_2 {
-  display: block;
-}
-
-.featuredlist_outer_inner_col1_topimg img {
+/* .singlefeatredlist_inner_topimg_1,
+.singlefeatredlist_inner_topimg_2, */
+/* .singlefeatredlist_inner_topimg_3 {
   padding-right: 15px;
-  border-color: #535399;
-  padding-left: 7px;
+  display: none;
+} */
+
+.singlefeatredlist:hover .singlefeatredlist_inner_topimg_1 {
+  display: block;
+  padding-left: 10px;
+  /* justify-content: center; */
 }
 
-.featuredlist_outer_inner_col1_img {
-  /* background-color: #F6F7FB; */
-  width: 270px;
-  align-items: center;
+.singlefeatredlist:hover .singlefeatredlist_inner_topimg_2 {
+  display: block;
+  padding-left: 10px;
+}
+
+.singlefeatredlist:hover .singlefeatredlist_inner_topimg_3 {
+  display: block;
+  padding-left:  10px;
+}
+
+.singlefeatredlist_inner_img {
   justify-content: center;
   display: flex;
-  flex-direction: row;
-  /* height: 236px; */
-  margin-bottom: 10px;
-  padding-top: 24px;
-  /* padding-bottom: 24px;  */
+  padding-top: 30px;
+  /* height: 195px; */
 }
 
-.featuredlist_outer_inner_col1:hover .featuredlist_outer_inner_col1_img {
-  height: 146px;
-  padding: 0%;
+.singlefeatredlist:hover .singlefeatredlist_inner_img {
+  height: 160;
+  padding-top: 0;
 }
 
-.featuredlist_outer_inner_col1_button {
+.singlefeatredlist:hover .singlefeatredlist_barimg {
   display: none;
 }
 
-.featuredlist_outer_inner_col1:hover .featuredlist_outer_inner_col1_button {
+.singlefeatredlist_h_barimg {
+  display: none;
+  align-content: center;
+  /* display: flex; */
+}
+.singlefeatredlist:hover .singlefeatredlist_h_barimg {
   display: block;
 }
 
-.featuredlist_outer_inner_col1_button button {
-  /* padding: 5px; */
+.singlefeatredlist_3bar {
+  padding-top: 10px;
+  justify-content: center;
+  display: flex;
+}
+
+.singlefeatredlist_inner_button {
+  display: none;
+}
+
+.singlefeatredlist:hover .singlefeatredlist_inner_button {
+  display: block;
+}
+
+.singlefeatredlist_inner_button button {
   width: 94px;
-  /* height: 29px; */
-  padding: 10px;
+  padding: 8px;
   border-radius: 2px;
   background-color: #08d15f;
   color: white;
@@ -165,31 +151,16 @@
   outline: none;
 }
 
-.featurelist_outer_img {
+.singlefeatredlist:hover .singlefeaturelistcircle {
   display: flex;
-}
-
-.h_barimg {
-  display: none;
-  align-content: center;
-}
-
-.featuredlist_outer_inner_col1:hover .h_barimg {
-  display: block;
-  /* align-items: center; */
-  /* display: flex; */
-}
-
-.featuredlist_outer_inner_col1:hover .barimg {
-  display: none;
-}
-
-.featuredlist_outer_inner_col1_3bar {
-  padding-top: 10px;
+  width: 31px;
+  height: 31px;
+  background-color: #e9e9f4;
+  border-radius: 50%;
+  margin-right: 5px;
+  display: flex;
+  align-items: center;
   justify-content: center;
-  display: flex;
+  align-content: center;
+  /* display: none; */
 }
-
-/********************************************************************/
-/***************************end Featuredlist page*******************/
-/********************************************************************/
