--- a/Project/ecommers/src/Featuredlist.css
+++ b/Project/ecommers/src/Featuredlist.css
@@ -72,12 +72,22 @@
   display: flex;
   padding-left: 10px;
   display: none;
+  height: 31px;
+  /* justify-content: center; */
+  align-items: center;
 }
 
 .singlefeatredlist:hover .singlefeatredlist_inner_topimg {
   display: block;
   display: flex;
 }
+
+/* .singlefeatredlist_inner_topimg_outer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 31px;
+} */
 
 /* .singlefeatredlist_inner_topimg_1,
 .singlefeatredlist_inner_topimg_2, */
@@ -88,18 +98,18 @@
 
 .singlefeatredlist:hover .singlefeatredlist_inner_topimg_1 {
   display: block;
-  padding-left: 10px;
+  /* padding-left: 10px; */
   /* justify-content: center; */
 }
 
 .singlefeatredlist:hover .singlefeatredlist_inner_topimg_2 {
   display: block;
-  padding-left: 10px;
+  /* padding-left: 10px; */
 }
 
 .singlefeatredlist:hover .singlefeatredlist_inner_topimg_3 {
   display: block;
-  padding-left:  10px;
+  /* padding-left:  10px; */
 }
 
 .singlefeatredlist_inner_img {
@@ -149,6 +159,18 @@
   color: white;
   border: none;
   outline: none;
+}
+
+.singlefeaturelistcircle{
+  display: flex;
+  width: 31px;
+  height: 31px;
+  background-color: rgb(0, 0, 0) transparent;
+  border-radius: 50%;
+  margin-right: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .singlefeatredlist:hover .singlefeaturelistcircle {
