--- a/Project/ecommers/src/Featuredlist.css
+++ b/Project/ecommers/src/Featuredlist.css
@@ -65,7 +65,7 @@
 .singlefeatredlist_inner {
   padding-top: 10px;
   background-color: #f6f7fb;
-  height: 225px;
+  height: 246px;
 }
 
 .singlefeatredlist_inner_topimg {
@@ -89,6 +89,7 @@
 
 .singlefeatredlist:hover .singlefeatredlist_inner_topimg_2 {
   display: block;
+  /* padding-left: 10px; */
 }
 
 .singlefeatredlist:hover .singlefeatredlist_inner_topimg_3 {
@@ -100,12 +101,12 @@
   justify-content: center;
   display: flex;
   padding-top: 30px;
-  /* height: 195px; */
+  /* height: 249px; */
 }
 
 .singlefeatredlist:hover .singlefeatredlist_inner_img {
-  height: 160;
-  padding-top: 0;
+  height: 200;
+  padding-top: 10px;
 }
 
 .singlefeatredlist:hover .singlefeatredlist_barimg {
@@ -133,6 +134,7 @@
 
 .singlefeatredlist:hover .singlefeatredlist_inner_button {
   display: block;
+  padding-top: 10px;
 }
 
 .singlefeatredlist_inner_button button {
