--- a/Project/ecommers/src/Productthumb.css
+++ b/Project/ecommers/src/Productthumb.css
@@ -1,7 +1,7 @@
 
 .productthumb_row1 {
   background-color: #f6f5ff;
-  padding-left: 300px;
+  padding-left: 350px;
   display: flex;
   flex-direction: column;
   /* width: 100%; */
@@ -116,11 +116,18 @@
     padding-top: 15px;
     padding-bottom: 10px;
     padding-left: 50px;
+    align-content: center;
+    align-items: center;
+    /* justify-content: center; */
 }
 
 .productthumb_row2_outer_col3_row3 img{
     color: #151875;
 
+}
+
+.productthumb_row2_outer_col3_row3_like{
+  display: flex;
 }
 
 .productthumb_row2_outer_col3_row3 label{
@@ -153,4 +160,16 @@
     font-size: .9rem;
     padding-right: 20px;
     font-weight: 550;
+}
+
+.productthumbcircle{
+  display: flex;
+  width: 31px;
+  height: 31px;
+  background-color:#e9e9f4;
+  border-radius: 50%;
+  /* margin-right: 5px; */
+  display: flex;
+  align-items:center;
+  justify-content: right;
 }
