--- a/Project/ecommers/src/Adminproductmain.css
+++ b/Project/ecommers/src/Adminproductmain.css
@@ -1,6 +1,6 @@
 .adminproductmain {
   display: flex;
-  background-color: yellow;
+  background-color: #FFFFFF;
   padding: 20px;
   color: #6b7a99;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
