--- a/Project/hekto/Frontend/src/pages/style.css
+++ b/Project/hekto/Frontend/src/pages/style.css
@@ -5,3 +5,11 @@ body{
     
 }
 
+.shoppage_gridpage_subbanner{
+    width: 80%;
+    background-color:red ;
+}
+
+.shoppage_gridpage_gridview{
+    margin-left: 6%;
+}
