--- a/Project/ecommers/src/Listview.css
+++ b/Project/ecommers/src/Listview.css
@@ -3,13 +3,13 @@
     padding: 10px;
     display: flex;
     flex-direction: column;
-    width: 65%;
+    /* width: 65%; */
    }
 
 .singlelist {
   display: flex;
   flex-direction: row;
-  width: 80%;
+  width: 78%;
   background-color: #FFFFFF;
   padding: 15px;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.05);
