--- a/Project/ecommers/src/Payment.css
+++ b/Project/ecommers/src/Payment.css
@@ -6,7 +6,7 @@
   padding-left: 13%;
   padding-right: 50px;
   background-color: white;
-  box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.2);
+  /* box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.2); */
 
 }
 
