--- a/Project/ecommers/src/Signup.css
+++ b/Project/ecommers/src/Signup.css
@@ -1,6 +1,6 @@
 .signup{
     /* background-color: brown; */
-    width: 40%;
+    /* width: 40%; */
     justify-content: center;
     display: flex;
     padding-top: 60px;
@@ -10,13 +10,13 @@
 .signup_inner{
     display: flex;
     flex-direction: column;
-    width: 75%;
+    width: 70%;
     background-color:white;
     text-align: center;
     align-items: center;
     padding-top: 20px;
     padding-bottom: 70px;
-    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.05);
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
 }
 
 .signup_inner h4{
