--- a/Project/hekto/Frontend/src/components/Gridview.css
+++ b/Project/hekto/Frontend/src/components/Gridview.css
@@ -1,59 +1,50 @@
-.gv-r1-vel-ethit-eusmod {
-  padding-left: 22px;
-  color: blue;
-  /* font-size: 22px; */
-  font-size: 1rem;
-  font-weight: 600;
+.gv-outer-cover-r1,
+.gv-outer-cover-r2,
+.gv-outer-cover-r3{
+  display: flex;
+  flex-direction: row;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
-  padding-top: 11px;
-  /* background-color: black; */
+  font-size: 1rem;
+  font-weight: 500;
+  padding-left: 188px;
 }
 
-.gv-r1-chr-1-pic {
-  background-color: rgb(209, 204, 204);
-  width: 259px;
-  padding-bottom: 33px;
-  /* width: 113px 173%; */
-  /* padding-bottom: 22px; */
-}
-
-.gv-r1-blue-dlor {
-  color: blue;
-  padding-left: 55px;
+.gv-r1-blue-dlor{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 0.9rem;
+  /* font-weight: 500; */
+  padding-left: 64px;
   padding-right: 11px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 1rem;
-  font-weight: 600;
 }
 
-.gv-r1-pink-dollr {
+.gv-r1-pink-dollr{
   color: brown;
-  text-decoration: line-through;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 1rem;
-  font-weight: 600;
+  font-size: 0.9rem;
+  
+  
 }
 
-.gv-r1-mooncolor {
-  padding-left: 105px;
+
+
+.gv-r1-mooncolor{
+  padding-left: 64px;
 }
 
-.gv-outer-cover {
-  display: flex;
-  flex-direction: row;
-  /* background-color: blue; */
-  /* width: 22%; */
-  padding-left: 143px;
+.gv-r1-chair-1{
+  background-color: rgb(255, 255, 255);
 }
 
-.gv-r1-cover {
-  padding-left: 11px;
+.gv-r1-chr-1-pic{
+  background-color: rgb(231, 247, 239);
+  padding-left: 4px;
+  padding-right: 5px;
+  margin-right: 22px;
+  margin-bottom: 22px;
+  margin-top: 39px;
 }
 
-.gv-row-2 {
-  /* background-color: blanchedalmond; */
-  display: flex;
-  flex-direction: row;
-  padding-left: 143px;
+.gv-r1-vel-ethit-eusmod{
+  text-align: center;
+  justify-content: center;
+  padding-left: 44px;
 }
