--- a/Project/hekto/Frontend/src/pages/style.css
+++ b/Project/hekto/Frontend/src/pages/style.css
@@ -6,8 +6,8 @@ body{
 }
 
 .shoppage_gridpage_subbanner{
-    width: 80%;
-    background-color:red ;
+    width: 83.5616%;
+    /* background-color:red ; */
 }
 
 .shoppage_gridpage_gridview{
